fix bug with profile page jumping

--- a/src/styles/components/sidebars/SettingsSidebar.module.scss
+++ b/src/styles/components/sidebars/SettingsSidebar.module.scss
@@ -14,6 +14,7 @@
 
   @include desktop {
     width: 280px;
+    max-width: 280px;
     height: auto;
   }
 }
